<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@drawable/menu_background"
    tools:context=".HighscoresActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="20dp"
        android:background="#9C000000">

        <TextView
            style="@style/gameText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/highscores"
            android:textSize="30sp"
            android:layout_marginBottom="20dp"/>

        <TextView
            style="@style/gameText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/grid_3x3"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/highscores3x3"
            style="@style/highscoreText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/share_tech_mono" />

        <TextView
            style="@style/gameText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/grid_4x4"
            android:textSize="30sp"
            android:layout_marginTop="20dp"/>

        <TextView
            android:id="@+id/highscores4x4"
            style="@style/highscoreText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            style="@style/gameText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/grid_5x5"
            android:textSize="30sp"
            android:layout_marginTop="20dp"/>

        <TextView
            android:id="@+id/highscores5x5"
            style="@style/highscoreText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

</LinearLayout>