<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/menu_background"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/tittle"
        android:layout_width="wrap_content"
        android:layout_height="130dp"
        android:src="@drawable/menu_title"
        app:layout_constraintBottom_toTopOf="@+id/gridSize"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.64" />

    <Button
        android:id="@+id/gridSize"
        android:onClick="increaseGridSize"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:backgroundTint="@color/neonGreen"
        android:fontFamily="@font/share_tech_mono"
        android:gravity="center"
        android:text="@string/grid_4x4"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.44" />

    <TextView
        android:id="@+id/gridSizeInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="14dp"
        android:elevation="10dp"
        android:fontFamily="@font/share_tech_mono"
        android:rotation="-4"
        android:text="@string/grid_classic"
        android:textAllCaps="true"
        android:textFontWeight="700"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/gridSize"
        app:layout_constraintEnd_toEndOf="@+id/gridSize"
        app:layout_constraintStart_toStartOf="@+id/gridSize" />

    <Button
        android:id="@+id/decreaseSize"
        android:onClick="decreaseGridSize"
        android:text="@string/decrease"
        android:fontFamily="@font/share_tech_mono"
        android:textSize="60sp"
        android:background="#00FFFFFF"
        android:textColor="@color/neonGreen"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/gridSize"
        app:layout_constraintEnd_toStartOf="@+id/gridSize"
        app:layout_constraintTop_toTopOf="@+id/gridSize" />

    <Button
        android:id="@+id/increaseSize"
        android:onClick="increaseGridSize"
        android:text="@string/increase"
        android:fontFamily="@font/share_tech_mono"
        android:textSize="60sp"
        android:background="#00FFFFFF"
        android:textColor="@color/neonGreen"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/gridSize"
        app:layout_constraintStart_toEndOf="@+id/gridSize"
        app:layout_constraintTop_toTopOf="@+id/gridSize" />

    <Button
        android:id="@+id/startButton"
        android:onClick="startGame"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/start_game"
        android:fontFamily="@font/share_tech_mono"
        android:textSize="16sp"
        android:textFontWeight="700"
        android:backgroundTint="#EAFFE1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gridSize"
        app:layout_constraintVertical_bias="0.08" />

    <Button
        android:id="@+id/scoreButton"
        android:onClick="showScore"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/highscores"
        android:fontFamily="@font/share_tech_mono"
        android:maxLines="1"
        android:backgroundTint="#EAFFE1"
        android:textSize="16sp"
        android:textFontWeight="700"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/startButton"
        app:layout_constraintVertical_bias="0.0" />

    <ImageButton
        android:id="@+id/muteMusicButton"
        android:onClick="toggleMuteMusic"
        android:layout_width="54dp"
        android:layout_height="54dp"
        android:src="@drawable/mute_music_button"
        android:background="@drawable/circle_button"
        android:scaleType="fitCenter"
        android:layout_marginVertical="20dp"
        android:layout_marginStart="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="@string/mute" />

    <ImageButton
        android:id="@+id/muteSoundButton"
        android:onClick="toggleMuteSound"
        android:layout_width="54dp"
        android:layout_height="54dp"
        android:src="@drawable/mute_sound_button"
        android:background="@drawable/circle_button"
        android:scaleType="fitCenter"
        android:layout_marginVertical="20dp"
        android:layout_marginStart="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/muteMusicButton"
        android:contentDescription="@string/mute" />

</androidx.constraintlayout.widget.ConstraintLayout>